--- a/templates/map_app/index.html
+++ b/templates/map_app/index.html
@@ -2,9 +2,51 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 500px;
+        width: 100%;
+      }
+    </style>
     <title>Mapa</title>
   </head>
   <body>
-    <h1>Mapa</h1>
-  </body>
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Vigia Natal</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarHome">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Dados Gerais <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Compartilhe</a>
+            </li>
+          </ul>
+            <a href="#" class="btn btn-primary mr-1" role="button" >Entrar</a>
+            <a href="#" class="btn btn-secondary mr-1"  role="button" >Cadastrar</a>
+        </div>
+      </nav>
+
+      <div class="container-fluid" id="map"></div>
+
+      <script>
+        var map;
+        function initMap() {
+          map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: -5.7793, lng: -35.2009},
+            zoom: 12
+          });
+        }
+      </script>
+      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpQLw7f_iBzysGHLSZ5l9aJ2y2OqDwDYE&callback=initMap"
+      async defer></script>
+    </body>
 </html>
