Página de dados gerais

--- a/map_app/templates/map_app/home.html
+++ b/map_app/templates/map_app/home.html
@@ -2,7 +2,7 @@
 
   {% block head_block %}
     {% load static %}
-    <link rel="stylesheet" href="{% static "css/map.css" %}">
+    <link rel="stylesheet" href="{% static 'css/map.css' %}">
     <title>Mapa</title>
   {% endblock %}
 
