--- a/map_app/templates/map_app/base.html
+++ b/map_app/templates/map_app/base.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Dados Gerais</a>
+            <a class="nav-link" href="{% url 'dados_gerais' %}">Dados Gerais</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Sobre</a>
