Adição das marcações no mapa, de acordo com as instituições, orgãos e despesas retornadas pela api

--- a/map_app/templates/map_app/despesa_list.html
+++ b/map_app/templates/map_app/despesa_list.html
@@ -8,7 +8,7 @@
         <h6> <a href="{% url 'despesa_detail' pk=despesa.pk %}">{{despesa.descricao}}</a> </h6>
         <div class="valordespesa">
           <p class="lead">Valor: R${{despesa.valor|floatformat:2}}</p>
-        <div/>
+        </div>
       </div>
     </li>
     {% endfor %}
