Detalhes da instituição, orgão e despesa adicionados

--- a/website/map_app/templates/map_app/home.html
+++ b/website/map_app/templates/map_app/home.html
@@ -8,8 +8,64 @@
 
   {% block body_block %}
     <div class="container-fluid" id="map"></div>
+    <br>
+    <div class="container-fluid" id="detalhe" style="display: none" >
+      <div class="row">
+        <div class="col-2"></div>
+        
+        <div class="col-2">
+          Nome:
+        </div>
 
-    <div class="container-fluid" id="detalhe" style="width: 200px; height: 300px; background-color: blueviolet"></div>
+        <div class="col-6" id="nome">
+          
+        </div>
+
+        <div class="col-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-2"></div>
+        
+        <div class="col-2">
+          Telefone:
+        </div>
+        
+        <div class="col-6" id="telefone">
+        </div>
+
+        <div class="col-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-2"></div>
+        
+        <div class="col-2">
+          Email:
+        </div>
+        
+        <div class="col-6" id="email">
+        </div>
+
+        <div class="col-2"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-2"></div>
+        
+        <div class="col-2">
+          Site:
+        </div>
+        
+        <div class="col-6" id="site">
+        </div>
+
+        <div class="col-2"></div>
+      </div>
+
+      <div class="row" id="despesa">
+      </div>
+    </div>
     
     <!-- Arquivos JavaScript-->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
