--- a/website/map_app/templates/map_app/home.html
+++ b/website/map_app/templates/map_app/home.html
@@ -11,10 +11,19 @@
     <br>
     <div class="container-fluid" id="detalhe" style="display: none" >
       <div class="row">
+          <div class="col-2"></div>
+
+          <div class="col" id="titulo">
+          </div>
+    
+          <div class="col-2"></div>
+      </div>
+      
+      <div class="row">
         <div class="col-2"></div>
         
         <div class="col-2">
-          Nome:
+          <b>Nome:</b>
         </div>
 
         <div class="col-6" id="nome">
@@ -27,24 +36,16 @@
       <div class="row">
         <div class="col-2"></div>
         
-        <div class="col-2">
-          Telefone:
-        </div>
-        
-        <div class="col-6" id="telefone">
+        <div class="col">
+            <b>Telefone:</b>
         </div>
 
-        <div class="col-2"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-2"></div>
-        
-        <div class="col-2">
-          Email:
+        <div class="col">
+            <b>Email:</b>
         </div>
-        
-        <div class="col-6" id="email">
+
+        <div class="col">
+            <b>Site:</b>
         </div>
 
         <div class="col-2"></div>
@@ -53,17 +54,16 @@
       <div class="row">
         <div class="col-2"></div>
         
-        <div class="col-2">
-          Site:
-        </div>
+        <div class="col" id="telefone"></div>
         
-        <div class="col-6" id="site">
-        </div>
+        <div class="col" id="email"></div>
+
+        <div class="col" id="site"></div>
 
         <div class="col-2"></div>
       </div>
 
-      <div class="row" id="despesa">
+      <div id="despesa">
       </div>
     </div>
     
