--- a/website/map_app/static/css/map.css
+++ b/website/map_app/static/css/map.css
@@ -10,5 +10,5 @@
   padding: 1%; 
   border: 2px solid black;
   border-radius: 25px;
-  background-color: #e5e5e5;
+  background-color: #f2f2f2;
 }
