--- a/website/map_app/templates/map_app/home.html
+++ b/website/map_app/templates/map_app/home.html
@@ -8,6 +8,24 @@
 
   {% block body_block %}
     <div class="container-fluid" id="map"></div>
+    
+    <div class="row">
+      <div class="col-2"></div>
+      <div class="col">
+        Instituição <div style="background-color: blue; width: 15px; height: 15px;"></div>
+      </div>
+
+      <div class="col">
+        Orgão <div style="background-color: green; width: 15px; height: 15px;"></div>
+      </div>
+
+      <div class="col">
+        Despesa <div style="background-color: yellow; width: 15px; height: 15px;"></div>
+      </div>
+
+      <div class="col-2"></div>
+    </div>
+
     <br>
     <div class="container-fluid" id="detalhe" style="display: none" >
       <div class="row">
