--- a/website/map_app/templates/map_app/comentarios.html
+++ b/website/map_app/templates/map_app/comentarios.html
@@ -24,4 +24,5 @@
     </li>
     {% endfor %}
   </ul>
+  <div id="comentariosfb" class="fb-comments" href="https://developers.facebook.com/docs/plugins/comments#configurator" data-numposts="5"></div>
   {% endblock %}
