--- a/website/map_app/templates/map_app/home.html
+++ b/website/map_app/templates/map_app/home.html
@@ -63,6 +63,8 @@
         <div class="col-2"></div>
       </div>
 
+      <div id="comentariosfb" class="fb-comments" href="https://127.0.0.1:8000/instituicoes/&lt;id&gt;" data-numposts="5"></div>
+
       <div class="row" id="despesa">
       </div>
     </div>
