--- a/website/map_app/templates/map_app/despesa_list.html
+++ b/website/map_app/templates/map_app/despesa_list.html
@@ -7,7 +7,7 @@
       <div class="despesa conteiner">
         <h6> <a href="{% url 'despesa_detail' pk=despesa.pk %}">{{despesa.descricao}}</a> </h6>
         <div class="valordespesa">
-          <p class="lead">Valor: R${{despesa.valor}}</p>
+          <p class="lead">Valor: R${{despesa.empenhado}}</p>
         </div>
       </div>
     </li>
