--- a/website/map_app/templates/map_app/home.html
+++ b/website/map_app/templates/map_app/home.html
@@ -8,7 +8,7 @@
 
   {% block body_block %}
     <div class="container-fluid" id="map"></div>
-    
+
     <div class="row">
       <div class="col-2"></div>
       <div class="col">
@@ -33,19 +33,19 @@
 
           <div class="col" id="titulo">
           </div>
-    
+
           <div class="col-2"></div>
       </div>
-      
+
       <div class="row">
         <div class="col-2"></div>
-        
+
         <div class="col-2">
           <b>Nome:</b>
         </div>
 
         <div class="col-6" id="nome">
-          
+
         </div>
 
         <div class="col-2"></div>
@@ -53,7 +53,7 @@
 
       <div class="row">
         <div class="col-2"></div>
-        
+
         <div class="col">
             <b>Telefone:</b>
         </div>
@@ -71,9 +71,9 @@
 
       <div class="row">
         <div class="col-2"></div>
-        
+
         <div class="col" id="telefone"></div>
-        
+
         <div class="col" id="email"></div>
 
         <div class="col" id="site"></div>
@@ -82,9 +82,12 @@
       </div>
 
       <div id="despesa">
+        <div class="row" id="despesa">
+        </div>
       </div>
-    </div>
-    
+      <div id="comentariosfb" class="fb-comments" href="https://127.0.0.1:8000/instituicoes/&lt;id&gt;" data-numposts="5"></div>
+
+
     <!-- Arquivos JavaScript-->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="{% static 'js/map.js' %}"></script>
